--- a/index.html
+++ b/index.html
@@ -2,158 +2,57 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Calculadora de Presupuestos</title>
+  <title>Calculadora de Presupuestos - Kassora</title>
   <style>
-    .presupuesto-section {
-      max-width: 1000px;
-      margin: auto;
-      padding: 40px;
-      border-radius: 10px;
-      background: url('https://i.ibb.co/fV42cgYF/fotofondo.jpg') no-repeat center center;
-      background-size: cover;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      color: #fff;
+    body {
+      margin: 0;
       font-family: Arial, sans-serif;
+      background: url('https://i.ibb.co/fV42cgYF/fotofondo.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
     }
 
-    .presupuesto-section h2 {
+    .presupuesto-section {
+      max-width: 900px;
+      margin: 40px auto;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 30px;
+      border-radius: 10px;
+    }
+
+    h2, h3 {
       text-align: center;
-      margin-bottom: 30px;
-      color: #ffffff;
-    }
-
-    .presupuesto-section .form-group {
       margin-bottom: 20px;
     }
 
-    .presupuesto-section .form-group label {
-      display: block;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-
-    .presupuesto-section input[type="number"] {
+    label, select, input, textarea {
       width: 100%;
+      margin-bottom: 15px;
       padding: 10px;
+      border: none;
       border-radius: 5px;
-      border: none;
-    }
-
-    .presupuesto-section .options-container,
-    .presupuesto-section .quality-options {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      margin-bottom: 20px;
-    }
-
-    .presupuesto-section .option,
-    .presupuesto-section .quality-option {
-      flex: 1;
-      min-width: 200px;
-      text-align: center;
-      padding: 20px;
-      background: #ffffffcc;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: transform 0.3s;
-      color: #000;
-    }
-
-    .presupuesto-section .option:hover,
-    .presupuesto-section .quality-option:hover {
-      transform: scale(1.05);
-    }
-
-    .presupuesto-section .option.selected,
-    .presupuesto-section .quality-option.selected {
-      background-color: #cbc4bc;
-      color: #000;
-    }
-
-    .presupuesto-section .option img {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-
-    .presupuesto-section .result-box {
-      background: #ffffffcc;
-      color: #000;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      margin-bottom: 20px;
-      font-size: 24px;
-      font-weight: bold;
-    }
-
-    .presupuesto-section .summary-container {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 30px;
-      color: #fff;
-    }
-
-    .presupuesto-section .summary-column {
-      width: 48%;
-    }
-
-    .presupuesto-section .summary-column h3 {
-      margin-bottom: 10px;
-      color: #fff;
-    }
-
-    .presupuesto-section .summary-column ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .presupuesto-section .summary-column ul li::before {
-      content: '✔';
-      margin-right: 8px;
-      color: #cbc4bc;
-    }
-
-    .presupuesto-section .hidden {
-      display: none;
-    }
-
-    .presupuesto-section button {
-      background-color: #cbc4bc;
-      color: #000;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 8px;
       font-size: 16px;
-      font-weight: bold;
+    }
+
+    button {
+      background-color: #ffaa00;
+      color: #000;
+      border: none;
+      padding: 12px;
+      border-radius: 5px;
+      font-size: 18px;
       cursor: pointer;
-      transition: background 0.3s ease;
-      display: block;
-      margin: 20px auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
-    .presupuesto-section button:hover {
-      background-color: #b8b0a8;
-    }
-
-    .presupuesto-section textarea {
-      width: 100%;
-      height: 80px;
-      border-radius: 8px;
-      padding: 10px;
-      font-family: inherit;
-      font-size: 14px;
-      resize: vertical;
+    .hidden {
+      display: none;
     }
 
     .popup {
       position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.6);
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.8);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -162,94 +61,97 @@
 
     .popup-content {
       background: #fff;
+      color: #000;
       padding: 30px;
       border-radius: 10px;
-      text-align: center;
       width: 90%;
       max-width: 400px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      text-align: center;
     }
 
-    .popup-content input {
+    .summary-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: center;
+      margin-top: 30px;
+    }
+
+    .summary-column {
+      flex: 1;
+      min-width: 250px;
+      background-color: rgba(255,255,255,0.1);
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+    .summary-column ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .summary-column li {
+      padding: 5px 0;
+    }
+
+    .img-preview {
       width: 100%;
-      padding: 10px;
-      margin-top: 15px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-
-    .popup-content button {
-      background-color: #cbc4bc;
-      color: #000;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
+      max-height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 15px;
     }
   </style>
 </head>
 <body>
+  <div class="presupuesto-section">
+    <h2>Calculadora de Presupuesto</h2>
+    <label for="tipo">Tipo de Reforma</label>
+    <select id="tipo">
+      <option value="">Selecciona una opción</option>
+      <option value="integral">Reforma Integral</option>
+      <option value="cocina">Reforma de Cocina</option>
+      <option value="baño">Reforma de Baño</option>
+      <option value="otros">Otros</option>
+    </select>
 
-<section class="presupuesto-section">
-  <h2>Calcula tu presupuesto</h2>
+    <img id="preview" class="img-preview hidden" src="" alt="Vista previa">
 
-  <div id="popupCorreo" class="popup hidden">
+    <div id="metros-group" class="hidden">
+      <label for="metros">Metros cuadrados</label>
+      <input type="number" id="metros" placeholder="Introduce los m²">
+    </div>
+
+    <div id="calidad-group" class="hidden">
+      <label for="calidad">Calidad de la Reforma</label>
+      <select id="calidad">
+        <option value="1000">Calidad Baja - 1000 €/m²</option>
+        <option value="1200">Calidad Media - 1200 €/m²</option>
+        <option value="1600">Calidad Alta - 1600 €/m²</option>
+      </select>
+    </div>
+
+    <div id="otros-group" class="hidden">
+      <label for="descripcion">Describe el proyecto que quieres realizar</label>
+      <textarea id="descripcion" placeholder="Ej: Reforma de local comercial pequeño..."></textarea>
+      <button onclick="mostrarPopup()">Mandar solicitud</button>
+    </div>
+
+    <button id="calcularBtn" class="hidden" onclick="mostrarPopup()">Calcular Presupuesto de la Reforma</button>
+  </div>
+
+  <div id="popup" class="popup hidden">
     <div class="popup-content">
-      <p>Introduce tu correo electrónico para continuar:</p>
-      <input type="email" id="correoUsuario" placeholder="tuemail@ejemplo.com">
-      <button onclick="confirmarCorreo()">Enviar</button>
+      <h3>Introduce tus datos</h3>
+      <input type="text" id="nombre" placeholder="Nombre y Apellidos">
+      <input type="tel" id="telefono" placeholder="Teléfono">
+      <button onclick="calcularPresupuesto()">Ver Presupuesto</button>
     </div>
   </div>
 
-  <div class="form-group">
-    <label for="metros">¿Cuántos metros cuadrados tiene tu obra?</label>
-    <input type="number" id="metros" placeholder="Ej: 80">
-  </div>
-
-  <div class="form-group">
-    <label>¿Qué tipo de reforma deseas?</label>
-    <div class="options-container">
-      <div class="option" onclick="selectReforma('integral', event)">
-        <img src="https://i.ibb.co/9mMnr5j9/reformaintegral.jpg" alt="Reforma Integral">
-        Reforma Integral
-      </div>
-      <div class="option" onclick="selectReforma('baño', event)">
-        <img src="https://i.ibb.co/7xyJRqS7/reformaba-o.jpg" alt="Reforma Baño">
-        Reforma de Baño
-      </div>
-      <div class="option" onclick="selectReforma('cocina', event)">
-        <img src="https://i.ibb.co/mr2mLwpM/reformacocina.jpg" alt="Reforma Cocina">
-        Reforma de Cocina
-      </div>
-      <div class="option" onclick="selectReforma('otros', event)">
-        <img src="https://i.ibb.co/cXvzvd0m/otros.jpg" alt="Otros">
-        Otros
-      </div>
-    </div>
-  </div>
-
-  <div id="calidadContainer" class="quality-options hidden">
-    <div class="quality-option" onclick="selectCalidad('baja', event)">Calidad Baja</div>
-    <div class="quality-option" onclick="selectCalidad('media', event)">Calidad Media</div>
-    <div class="quality-option" onclick="selectCalidad('alta', event)">Calidad Alta</div>
-  </div>
-
-  <div id="otrosTexto" class="form-group hidden">
-    <textarea id="descripcionOtros" placeholder="Describe tu reforma"></textarea>
-    <button onclick="mandarSolicitudOtros()">Mandar Solicitud</button>
-  </div>
-
-  <button id="btnCalcularPresupuesto" onclick="calcularPresupuesto()">Calcular Presupuesto Reforma</button>
-
-  <div id="resultado" class="result-box hidden"></div>
-
-  <button id="btnCalcularProyecto" onclick="calcularProyecto()" class="hidden">Calcular Proyecto</button>
-
-  <div id="resultadoProyecto" class="result-box hidden"></div>
-
-  <div id="resumen" class="hidden">
+  <div id="resumen" class="presupuesto-section hidden">
+    <h2>Presupuesto Generado</h2>
+    <p id="resultado"></p>
     <div class="summary-container">
       <div class="summary-column">
         <h3>📑 Documentación entregada</h3>
@@ -276,100 +178,76 @@
       </div>
     </div>
   </div>
-</section>
 
-<script>
-  let tipo = '';
-  let calidad = '';
-  let metros = 0;
-  let datosUsuario = {};
+  <script>
+    const tipo = document.getElementById('tipo');
+    const metrosGroup = document.getElementById('metros-group');
+    const calidadGroup = document.getElementById('calidad-group');
+    const calcularBtn = document.getElementById('calcularBtn');
+    const otrosGroup = document.getElementById('otros-group');
+    const preview = document.getElementById('preview');
+    const popup = document.getElementById('popup');
+    const resumen = document.getElementById('resumen');
+    const resultado = document.getElementById('resultado');
 
-  function selectReforma(value, event) {
-    tipo = value;
-    document.querySelectorAll('.option').forEach(opt => opt.classList.remove('selected'));
-    event.currentTarget.classList.add('selected');
+    tipo.addEventListener('change', () => {
+      const value = tipo.value;
+      metrosGroup.classList.add('hidden');
+      calidadGroup.classList.add('hidden');
+      calcularBtn.classList.add('hidden');
+      otrosGroup.classList.add('hidden');
+      preview.classList.remove('hidden');
 
-    document.getElementById('calidadContainer').classList.toggle('hidden', tipo !== 'integral');
-    document.getElementById('otrosTexto').classList.toggle('hidden', tipo !== 'otros');
-    document.getElementById('btnCalcularPresupuesto').classList.toggle('hidden', tipo === 'otros');
-  }
+      if (value === 'integral') {
+        preview.src = 'https://i.ibb.co/9mMnr5j9/reformaintegral.jpg';
+        metrosGroup.classList.remove('hidden');
+        calidadGroup.classList.remove('hidden');
+        calcularBtn.classList.remove('hidden');
+      } else if (value === 'cocina') {
+        preview.src = 'https://i.ibb.co/mr2mLwpM/reformacocina.jpg';
+        metrosGroup.classList.remove('hidden');
+        calcularBtn.classList.remove('hidden');
+      } else if (value === 'baño') {
+        preview.src = 'https://i.ibb.co/7xyJRqS7/reformaba-o.jpg';
+        metrosGroup.classList.remove('hidden');
+        calcularBtn.classList.remove('hidden');
+      } else if (value === 'otros') {
+        preview.src = 'https://i.ibb.co/cXvzvd0m/otros.jpg';
+        otrosGroup.classList.remove('hidden');
+      } else {
+        preview.classList.add('hidden');
+      }
+    });
 
-  function selectCalidad(value, event) {
-    calidad = value;
-    document.querySelectorAll('.quality-option').forEach(opt => opt.classList.remove('selected'));
-    event.currentTarget.classList.add('selected');
-  }
-
-  function calcularPresupuesto() {
-    metros = parseFloat(document.getElementById("metros").value);
-    if (isNaN(metros) || metros <= 0 || !tipo || (tipo === 'integral' && !calidad)) {
-      alert("Por favor rellena todos los campos correctamente.");
-      return;
+    function mostrarPopup() {
+      popup.classList.remove('hidden');
     }
 
-    datosUsuario = { metros, tipo, calidad };
-    mostrarPopupCorreo();
-  }
+    function calcularPresupuesto() {
+      const nombre = document.getElementById('nombre').value;
+      const telefono = document.getElementById('telefono').value;
+      const m2 = parseFloat(document.getElementById('metros').value);
+      let precio = 0;
+      const tipoValue = tipo.value;
 
-  function mostrarPopupCorreo() {
-    document.getElementById("popupCorreo").classList.remove("hidden");
-  }
+      if (tipoValue === 'integral') {
+        const calidad = parseFloat(document.getElementById('calidad').value);
+        precio = m2 * calidad;
+      } else if (tipoValue === 'cocina' || tipoValue === 'baño') {
+        precio = m2 * 2500;
+      } else if (tipoValue === 'otros') {
+        popup.classList.add('hidden');
+        resumen.classList.remove('hidden');
+        resultado.innerHTML = `<strong>${nombre}</strong>, hemos recibido tu solicitud. Te contactaremos en breve.`;
+        return;
+      }
 
-  function confirmarCorreo() {
-    const correo = document.getElementById("correoUsuario").value.trim();
-    if (!/\S+@\S+\.\S+/.test(correo)) {
-      alert("Por favor introduce un correo válido.");
-      return;
+      const gestion = m2 * 100;
+      resultado.innerHTML = `<strong>${nombre}</strong>, tu presupuesto estimado es <strong>${precio.toLocaleString()} €</strong>.<br>Coste del proyecto: <strong>${gestion.toLocaleString()} €</strong>`;
+
+      popup.classList.add('hidden');
+      resumen.classList.remove('hidden');
     }
-
-    datosUsuario.correo = correo;
-    document.getElementById("popupCorreo").classList.add("hidden");
-
-    if (tipo === 'otros') {
-      document.getElementById('resumen').classList.remove('hidden');
-    } else {
-      mostrarPresupuesto();
-    }
-  }
-
-  function mostrarPresupuesto() {
-    let precio = 0;
-    if (tipo === 'integral') {
-      if (calidad === 'baja') precio = 1000;
-      if (calidad === 'media') precio = 1200;
-      if (calidad === 'alta') precio = 1600;
-    } else {
-      precio = 2500;
-    }
-
-    const total = metros * precio;
-    const resultadoDiv = document.getElementById("resultado");
-    resultadoDiv.innerHTML = `Presupuesto estimado: <strong>${total.toLocaleString()} €</strong>`;
-    resultadoDiv.classList.remove('hidden');
-
-    if (tipo === 'integral') {
-      document.getElementById('btnCalcularProyecto').classList.remove('hidden');
-    }
-
-    document.getElementById('resumen').classList.remove('hidden');
-    console.log("Datos del usuario:", datosUsuario);
-  }
-
-  function calcularProyecto() {
-    const resultadoDiv = document.getElementById("resultadoProyecto");
-    resultadoDiv.innerHTML = `Coste adicional del proyecto: <strong>2.000 €</strong>`;
-    resultadoDiv.classList.remove('hidden');
-  }
-
-  function mandarSolicitudOtros() {
-    const descripcion = document.getElementById("descripcionOtros").value.trim();
-    if (!descripcion) {
-      alert("Por favor describe tu reforma antes de mandar la solicitud.");
-      return;
-    }
-    datosUsuario = { tipo, descripcion };
-    mostrarPopupCorreo();
-  }
-</script>
+  </script>
 </body>
 </html>
